fix: mobile view should not have horizontal scroll

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -104,7 +104,7 @@
 
 @media screen and (max-width: 996px) {
   .feature {
-    margin: 2.5em;
+    padding: 2.5em;
   }
   .featureImage {
     float: left;
